# rust-bbot-camp

./: Cargo.toml  README.md  TRAITSANDOOP.md  makefile  promts.txt
src/: control_flow.rs  main.rs  my_args.rs  my_closures.rs  my_enums.rs  my_external_proccess.rs  my_functions.rs  my_generic.rs  my_hash_map.rs  my_http.rs  my_iterator.rs  my_match_expression.rs  my_methods.rs  my_option.rs  my_option_overload.rs  my_regular_expression.rs  my_serde.rs  my_struct.rs  my_traits.rs  my_vec.rs  user_inputs.rs
src/asyncs/: mod.rs  my_smol.rs  my_tokio.rs
src/clap/: mod.rs  my_cli.rs
src/csv/: mod.rs  my_csv.rs  vehicle.csv
src/external_process/: mod.rs  my_external_proccess.rs
src/file_system/: mod.rs  my_file_system.rs
src/file_system/data/: temp_file.json  temp_file.txt
src/prompt_cmd/: mod.rs  my_clap.rs  my_inquire.rs  user_inputs.rs
src/tasks/: sort_values.rs
src/time_module/: mod.rs  my_chrono.rs  my_time.rs
src/unit_tests/: mod.rs  my_code.rs  my_test.rs
