[package]
name = "rust-bbot-camp"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["cargo"] }
csv = "1.3.1"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smol = "2.0.2"
tokio = { version = "1.46.1", features = ["macros", "rt", "rt-multi-thread"] }
